--- a/navigation.css
+++ b/navigation.css
@@ -12,6 +12,7 @@
   width: 100vw;
   height: 6vh;
   position: fixed;
+  align-items: center;
   float: top;
   right: 0vw;
   text-align: left;
@@ -23,6 +24,7 @@
   /*Home label for navigation bar*/
   z-index:9999;
   position: relative;
+  display: flex;
   padding:0;
   margin: 0%;
   font-size: 1em;
@@ -109,6 +111,9 @@ div.navigationTopBox {
   width: 100vw;
   height: 8vh;
   position: fixed;
+  display: flex;
+  
+  align-items: center;
   float: right;
   right: 0%;
   bottom: 0%;
@@ -286,6 +291,7 @@ div.navigationTopBox {
 }
 .jsLabel:hover,.text:hover {
   background-color: rgb(0, 0, 0,0);
+  
   color: rgb(255, 255, 255,0);
   font-size: 1.2em;
 }
